--- a/interactive_scripts.ipynb
+++ b/interactive_scripts.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -247,7 +248,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Start the Pre-Processing"
+    "## Pre-Processing New Seasons\n",
+    "\n",
+    "The following scripts pre-process new season data. From checking the input to a cleaned season inventory file."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Check Input Structure\n",
+    "\n",
+    "The following script checks the input / directory structure of a new season. The files should be organized according to:\n",
+    "/home/packerc/shared/albums/{SITE}/{SEASON}/camera/roll/image1.JPG"
    ]
   },
   {
@@ -261,7 +274,17 @@
     "# Check Input Structure\n",
     "!python3 -m pre_processing.check_input_structure \\\n",
     "--root_dir /home/packerc/shared/albums/{SITE}/{SEASON}/ \\\n",
-    "--log_dir /home/packerc/shared/season_captures/{SITE}/log_files/"
+    "--log_dir /home/packerc/shared/season_captures/{SITE}/log_files/ \\\n",
+    "--log_filename {SEASON}_check_input_structure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Check for Duplicate Images\n",
+    "\n",
+    "The following script checks for duplicates and prints them to the terminal and a log file if any are found but does not delete or alter anything. If duplicates are found they have to be removed manually."
    ]
   },
   {
@@ -275,7 +298,17 @@
     "# check for duplicates - this can take a while for large batches >> 100k images\n",
     "!python3 -m pre_processing.check_for_duplicates \\\n",
     "--root_dir /home/packerc/shared/albums/{SITE}/{SEASON}/ \\\n",
-    "--log_dir /home/packerc/shared/season_captures/{SITE}/log_files/"
+    "--log_dir /home/packerc/shared/season_captures/{SITE}/log_files/ \\\n",
+    "--log_filename {SEASON}_check_for_duplicates"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create Image Inventory\n",
+    "\n",
+    "Create a csv file with all images and some basic information."
    ]
   },
   {
@@ -290,7 +323,17 @@
     "!python3 -m pre_processing.create_image_inventory \\\n",
     "--root_dir /home/packerc/shared/albums/{SITE}/{SEASON}/ \\\n",
     "--output_csv /home/packerc/shared/season_captures/{SITE}/inventory/{SEASON}_inventory_basic.csv \\\n",
-    "--log_dir /home/packerc/shared/season_captures/{SITE}/log_files/"
+    "--log_dir /home/packerc/shared/season_captures/{SITE}/log_files/ \\\n",
+    "--log_filename {SEASON}_create_image_inventory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Basic Inventory Checks\n",
+    "\n",
+    "The following script performs basic checks of each image. It checks for all_black/ all_white images and for corruption. This code runs relatively long. For large seasons >> 100k images it is better to use the 'qsub' script."
    ]
   },
   {
@@ -305,8 +348,9 @@
     "!python3 -m pre_processing.basic_inventory_checks \\\n",
     "--inventory /home/packerc/shared/season_captures/{SITE}/inventory/{SEASON}_inventory_basic.csv \\\n",
     "--output_csv /home/packerc/shared/season_captures/{SITE}/inventory/{SEASON}_inventory.csv \\\n",
+    "--n_processes 16 \\\n",
     "--log_dir /home/packerc/shared/season_captures/{SITE}/log_files/ \\\n",
-    "--n_processes 16"
+    "--log_filename {SEASON}_basic_inventory_checks"
    ]
   },
   {
@@ -354,7 +398,16 @@
    },
    "outputs": [],
    "source": [
-    "!tail /home/packerc/shared/season_captures/{SITE}/log_files/"
+    "!tail /home/packerc/shared/season_captures/{SITE}/log_files/{SEASON}_basic_inventory_checks.log"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extract EXIF Data\n",
+    "\n",
+    "The following script extracts EXIF (meta-data) from each image using a special, external program (exiftool)."
    ]
   },
   {
@@ -371,7 +424,17 @@
     "--update_inventory \\\n",
     "--output_csv /home/packerc/shared/season_captures/{SITE}/inventory/{SEASON}_exif_data.csv \\\n",
     "--exiftool_path /home/packerc/shared/programs/Image-ExifTool-11.31/exiftool \\\n",
-    "--log_dir /home/packerc/shared/season_captures/{SITE}/log_files/"
+    "--log_dir /home/packerc/shared/season_captures/{SITE}/log_files/ \\\n",
+    "--log_filename {SEASON}_extract_exif_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Group Images into Captures\n",
+    "\n",
+    "The following script groups the images into capture events based on their timestamps. The configuration file (config/cfg.yaml) defines how many seconds images can be apart to be considered part of the same capture, as well as the max number of images per capture."
    ]
   },
   {
@@ -386,9 +449,19 @@
     "!python3 -m pre_processing.group_inventory_into_captures \\\n",
     "--inventory /home/packerc/shared/season_captures/{SITE}/inventory/{SEASON}_inventory.csv \\\n",
     "--output_csv /home/packerc/shared/season_captures/{SITE}/captures/{SEASON}_captures.csv \\\n",
-    "--log_dir /home/packerc/shared/season_captures/{SITE}/log_files/ \\\n",
     "--no_older_than_year 2017 \\\n",
-    "--no_newer_than_year 2019"
+    "--no_newer_than_year 2019 \\\n",
+    "--log_dir /home/packerc/shared/season_captures/{SITE}/log_files/ \\\n",
+    "--log_filename {SEASON}_group_inventory_into_captures"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rename the Images\n",
+    "\n",
+    "The following script renames the images according to SEASON_SITE_ROLL_IMAG0001.JPG."
    ]
   },
   {
@@ -402,7 +475,17 @@
     "# Rename all images\n",
     "!python3 -m pre_processing.rename_images \\\n",
     "--inventory /home/packerc/shared/season_captures/{SITE}/captures/{SEASON}_captures.csv \\\n",
-    "--log_dir /home/packerc/shared/season_captures/{SITE}/log_files/"
+    "--log_dir /home/packerc/shared/season_captures/{SITE}/log_files/ \\\n",
+    "--log_filename {SEASON}_rename_images"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generate Action List\n",
+    "\n",
+    "The following script generates an 'action list', a csv file, which contains recommended actions to take for each image based on potential issues detected by previous codes. It also allows for adding more actions. See https://github.com/marco-willi/camera-trap-data-pipeline/blob/master/docs/pre_processing.md for more details."
    ]
   },
   {
@@ -417,8 +500,18 @@
     "!python3 -m pre_processing.create_action_list \\\n",
     "--captures /home/packerc/shared/season_captures/{SITE}/captures/{SEASON}_captures.csv \\\n",
     "--action_list_csv /home/packerc/shared/season_captures/{SITE}/captures/{SEASON}_action_list.csv \\\n",
+    "--plot_timelines \\\n",
     "--log_dir /home/packerc/shared/season_captures/{SITE}/log_files/ \\\n",
-    "--plot_timelines"
+    "--log_filename {SEASON}_create_action_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generate Actions\n",
+    "\n",
+    "After creating and updating the action list the following script generates 'action items' by unpacking the 'action list'. The script generates a csv with one line per action which can be checked for correctness."
    ]
   },
   {
@@ -434,7 +527,17 @@
     "--captures /home/packerc/shared/season_captures/{SITE}/captures/{SEASON}_captures.csv \\\n",
     "--action_list /home/packerc/shared/season_captures/{SITE}/captures/{SEASON}_action_list.csv \\\n",
     "--actions_to_perform_csv /home/packerc/shared/season_captures/{SITE}/captures/{SEASON}_actions_to_perform.csv \\\n",
-    "--log_dir /home/packerc/shared/season_captures/{SITE}/log_files/"
+    "--log_dir /home/packerc/shared/season_captures/{SITE}/log_files/ \\\n",
+    "--log_filename {SEASON}_generate_actions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Apply Actions\n",
+    "\n",
+    "The following script applies the actions as defined in the action list and changes the captures.csv."
    ]
   },
   {
@@ -449,7 +552,17 @@
     "!python3 -m pre_processing.apply_actions \\\n",
     "--captures /home/packerc/shared/season_captures/{SITE}/captures/{SEASON}_captures.csv \\\n",
     "--actions_to_perform /home/packerc/shared/season_captures/{SITE}/captures/{SEASON}_actions_to_perform.csv \\\n",
-    "--log_dir /home/packerc/shared/season_captures/{SITE}/log_files/"
+    "--log_dir /home/packerc/shared/season_captures/{SITE}/log_files/ \\\n",
+    "--log_filename {SEASON}_apply_actions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Update Captures\n",
+    "\n",
+    "The following script generates an updated captures file and removes certain records (for example deleted images)."
    ]
   },
   {
@@ -464,7 +577,8 @@
     "!python3 -m pre_processing.update_captures \\\n",
     "--captures /home/packerc/shared/season_captures/{SITE}/captures/{SEASON}_captures.csv \\\n",
     "--captures_updated /home/packerc/shared/season_captures/{SITE}/captures/{SEASON}_captures_updated.csv \\\n",
-    "--log_dir /home/packerc/shared/season_captures/{SITE}/log_files/"
+    "--log_dir /home/packerc/shared/season_captures/{SITE}/log_files/ \\\n",
+    "--log_filename {SEASON}_update_captures"
    ]
   },
   {
@@ -491,7 +605,8 @@
     "!python3 -m pre_processing.create_action_list \\\n",
     "--captures /home/packerc/shared/season_captures/{SITE}/captures/{SEASON}_captures_updated.csv \\\n",
     "--action_list_csv /home/packerc/shared/season_captures/{SITE}/captures/{SEASON}_action_list2.csv \\\n",
-    "--log_dir /home/packerc/shared/season_captures/{SITE}/log_files/"
+    "--log_dir /home/packerc/shared/season_captures/{SITE}/log_files/ \\\n",
+    "--log_filename {SEASON}_create_action_list"
    ]
   },
   {
@@ -818,9 +933,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Create species consensus only report\n",
@@ -861,27 +974,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 3.6",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -893,7 +1002,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
