update code structure (1/2)

--- a/utils/interactive_scripts.ipynb
+++ b/utils/interactive_scripts.ipynb
@@ -840,7 +840,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "!python3 -m zooniverse_aggregations.aggregate_annotations_plurality \\\n",
+    "!python3 -m aggregations.aggregate_annotations_plurality \\\n",
     "--annotations /home/packerc/shared/zooniverse/Exports/{SITE}/{SEASON}_annotations.csv \\\n",
     "--output_csv /home/packerc/shared/zooniverse/Aggregations/{SITE}/{SEASON}_annotations_aggregated_plurality.csv \\\n",
     "--log_dir /home/packerc/shared/zooniverse/Aggregations/{SITE}/"
@@ -858,7 +858,7 @@
     "!python3 -m zooniverse_exports.merge_csvs \\\n",
     "--base_csv /home/packerc/shared/zooniverse/Aggregations/{SITE}/{SEASON}_annotations_aggregated_plurality.csv \\\n",
     "--to_add_csv /home/packerc/shared/zooniverse/Exports/{SITE}/{SEASON}_subjects_extracted.csv \\\n",
-    "--output_csv /home/packerc/shared/zooniverse/Aggregations/{SITE}/{SEASON}_annotations_aggregated_plurality_info.csv \\\n",
+    "--output_csv /home/packerc/shared/zooniverse/Aggregations/{SITE}/{SEASON}_aggregated_plurality.csv \\\n",
     "--key subject_id"
    ]
   },
@@ -882,7 +882,7 @@
     "# Create report\n",
     "!python3 -m reporting.create_zooniverse_report \\\n",
     "--season_captures_csv /home/packerc/shared/season_captures/{SITE}/cleaned/{SEASON}_cleaned.csv \\\n",
-    "--aggregated_csv /home/packerc/shared/zooniverse/Aggregations/{SITE}/{SEASON}_annotations_aggregated_plurality_info.csv \\\n",
+    "--aggregated_csv /home/packerc/shared/zooniverse/Aggregations/{SITE}/{SEASON}_aggregated_plurality.csv \\\n",
     "--output_csv /home/packerc/shared/zooniverse/ConsensusReports/{SITE}/{SEASON}_report_all.csv \\\n",
     "--default_season_id {SEASON} \\\n",
     "--log_dir /home/packerc/shared/zooniverse/ConsensusReports/{SITE}/\n",
@@ -905,7 +905,7 @@
     "# Create species consensus only report\n",
     "!python3 -m reporting.create_zooniverse_report \\\n",
     "--season_captures_csv /home/packerc/shared/season_captures/{SITE}/cleaned/{SEASON}_cleaned.csv \\\n",
-    "--aggregated_csv /home/packerc/shared/zooniverse/Aggregations/{SITE}/{SEASON}_annotations_aggregated_plurality_info.csv \\\n",
+    "--aggregated_csv /home/packerc/shared/zooniverse/Aggregations/{SITE}/{SEASON}_aggregated_plurality.csv \\\n",
     "--output_csv /home/packerc/shared/zooniverse/ConsensusReports/{SITE}/{SEASON}_report_species.csv \\\n",
     "--log_dir /home/packerc/shared/zooniverse/ConsensusReports/{SITE}/ \\\n",
     "--default_season_id {SEASON} \\\n",
@@ -939,7 +939,7 @@
     "# Create species consensus only report\n",
     "!python3 -m reporting.create_zooniverse_report \\\n",
     "--season_captures_csv /home/packerc/shared/season_captures/{SITE}/cleaned/{SEASON}_cleaned.csv \\\n",
-    "--aggregated_csv /home/packerc/shared/zooniverse/Aggregations/{SITE}/{SEASON}_annotations_aggregated_plurality_info.csv \\\n",
+    "--aggregated_csv /home/packerc/shared/zooniverse/Aggregations/{SITE}/{SEASON}_aggregated_plurality.csv \\\n",
     "--output_csv /home/packerc/shared/zooniverse/ConsensusReports/{SITE}/{SEASON}_report.csv \\\n",
     "--default_season_id {SEASON} \\\n",
     "--exclude_blanks \\\n",
