fix typo, rename 'file_creation_date' to 'datetime_file_creation'

--- a/utils/interactive_scripts.ipynb
+++ b/utils/interactive_scripts.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "## Parameters \n",
     "\n",
-    "Here we select / define the paramters of the current run: Choose the appropriate cell and execute or modify it. For a new season: create a new cell using the 'Insert' menu at the top."
+    "Here we select / define the parameters of the current run: Choose the appropriate cell and execute or modify it. For a new season: create a new cell using the 'Insert' menu at the top."
    ]
   },
   {
@@ -229,7 +229,7 @@
    "source": [
     "### Verify Parameters\n",
     "\n",
-    "Lets check the paramters."
+    "Lets check the parameters."
    ]
   },
   {
